# ai-

./: .gitattributes  .gitignore  .ruff.toml  ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  README.md  _tmp_inspect.ps1  _tmp_inspect2.ps1  llm_engine.py  main.py  mypy.ini  pyproject.toml  pytest.ini  quality.py  requirements.txt  scraper.py
config/: proper_noun_glossary.json  settings.py  z0_sources.json
core/: ai_core.py  content_gate.py  content_strategy.py  deep_analyzer.py  deep_delivery.py  delivery.py  doc_generator.py  education_renderer.py  entity_extraction.py  image_helper.py  info_density.py  ingest_news.py  ingestion.py  news_sources.py  notifications.py  notion_generator.py  ppt_generator.py  storage.py  xmind_generator.py  z0_collector.py  z0_loader.py
docs/: DIAG-v0.2.1.md  ECR-v0.2.1.md
schemas/: education_models.py  models.py
scripts/: _summarize_verify_output.py  _tmp_delivery_probe.ps1  check_text_integrity.ps1  diag_shortcut.ps1  diagnostics_pptx.py  evidence_d_fail_demo.ps1  generate_reports.ps1  init_db.py  install_daily_9am_task.ps1  install_daily_task.ps1  install_desktop_button.ps1  install_desktop_ppt_shortcut.ps1  llama_server.ps1  open_latest.ps1  open_ppt.ps1  probe_outputs_root.ps1  run.bat  run.ps1  run_daily.py  run_once.py  run_pipeline.ps1  run_scheduler.py  setup_desktop_shortcut_open_ppt.ps1  setup_scheduler.bat  setup_scheduler.ps1  uninstall_daily_task.ps1  uninstall_desktop_button.ps1  verify_online.ps1  verify_run.ps1  verify_shortcut_open_ppt.ps1  write_latest_delivery_pointer.ps1  z0_collect.ps1
utils/: article_fetch.py  (+32 more)
(+81 files in other folders)
