[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-intel-scraper-mvp"
version = "0.2.3"
requires-python = ">=3.11"

[project.scripts]
lint = "quality:lint"
typecheck = "quality:typecheck"
test = "quality:test"
check = "quality:check"

[tool.setuptools]
py-modules = ["quality"]
